# mini-web-server

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  Config.hpp  ConfigReader.cpp  ConfigReader.hpp  HTTP_MessageAnalyzer.cpp  HTTP_MessageAnalyzer.hpp  Header.hpp  LICENSE  Request.cpp  Request.hpp  Server.cpp  Server.hpp  ServerConfig.hpp  helper  main.cpp  old.cpp  server.hpp  test.c
.github/: Route.cpp  Route.hpp
.github/workflows/: c-cpp.yml
get_next_line/: get_next_line.c  get_next_line_utils.c
includes/: allowed_library_includes.h  allowed_library_includes.hpp  simplifiers.hpp
libft/: ft_bzero.c  ft_calloc.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstnew.c  ft_split.c  ft_strdup.c  ft_strjoin.c  ft_strmapi.c  ft_strtrim.c  ft_substr.c  libft.h
parser/: CMakeLists.txt  README.md  a.out  get_next_line.cpp  main.cpp  parser.cpp  parser.hpp  parser_new.cpp  server.conf  server.hpp  test  utils.cpp
site/: index.html
site/autoindex/: autoindex.html
site/errors/: 404.html
webserv/: ARequest.cpp  ARequest.hpp  AResponse.cpp  AResponse.hpp  AServer.cpp  AServer.hpp  BufferProcessor.cpp  BufferProcessor.hpp  BufferReader.cpp  BufferReader.hpp  CGI.cpp  CGI.hpp  Config.hpp  ConfigReader.hpp  Header.cpp  Header.hpp  HeaderUtils.cpp  HeaderValidator.cpp  HeaderValidator.hpp  IServer.hpp  Logger.cpp  Logger.hpp  MessageParser.cpp  MessageParser.hpp  MessageUtils.cpp  MessageValidator.cpp  MessageValidator.hpp  ReadElement.cpp  ReadElement.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp  Server.cpp  Server.hpp  ServerConfig.hpp  ServerElement.cpp  ServerElement.hpp  WriteElement.cpp  WriteElement.hpp  (+4 more)
webserv/Abstract&Interfaces/: ARequest.cpp  ARequest.hpp  AResponse.cpp  AResponse.hpp  AServer.cpp  AServer.hpp  ILogger.hpp  IRequest.hpp  IServer.hpp
webserv/configs/: server.conf
webserv/includes/: HeaderUtils.hpp  MessageUtils.hpp  allowed_library_includes.hpp  parser.hpp  simplifiers.hpp
webserv/parser/: README.md  ServerParser.cpp  ServerParser.hpp  parser.cpp  parser_new.cpp  utils.cpp
webserv/site/: index.html
webserv/site/autoindex/: autoindex.html
webserv/site/errors/: 405.html  505.html  error_page.html  error_template.html
